; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_data_add_change.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_data_add_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 (i32**, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @data_add_change(%struct.TYPE_5__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %6, align 4
  %11 = add nsw i32 %10, 1
  %12 = call i64 @map_int_vptr_add(i32* %9, i32 %11)
  %13 = inttoptr i64 %12 to i32**
  store i32** %13, i32*** %7, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = call %struct.TYPE_6__* @DATA_FUNC(%struct.TYPE_5__* %14)
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32 (i32**, i32*)*, i32 (i32**, i32*)** %16, align 8
  %18 = load i32**, i32*** %7, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 %17(i32** %18, i32* %19)
  %21 = load i32**, i32*** %7, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %30

24:                                               ; preds = %3
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i32, i32* %6, align 4
  %28 = add nsw i32 %27, 1
  %29 = call i32 @map_int_vptr_del(i32* %26, i32 %28)
  br label %30

30:                                               ; preds = %24, %3
  ret i32 0
}

declare dso_local i64 @map_int_vptr_add(i32*, i32) #1

declare dso_local %struct.TYPE_6__* @DATA_FUNC(%struct.TYPE_5__*) #1

declare dso_local i32 @map_int_vptr_del(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
